[package]
name = "ece461-team11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ece461_team11"
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.7.1", features = ["extension-module"] }
